--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -62,6 +62,7 @@ module:
   page_cache: 0
   paragraphs_features: 0
   path: 0
+  path_alias: 0
   quick_node_clone: 0
   quickedit: 0
   rdf: 0
@@ -85,7 +86,6 @@ module:
   views_ui: 0
   webform: 0
   webform_node: 0
-  webform_ui: 0
   extlink: 1
   menu_link_content: 1
   pathauto: 1
