--- a/config/sync/views.view.header_par_slideshow.yml
+++ b/config/sync/views.view.header_par_slideshow.yml
@@ -20,7 +20,6 @@ description: ''
 tag: ''
 base_table: paragraphs_item_revision_field_data
 base_field: revision_id
-core: 8.x
 display:
   default:
     display_plugin: default
@@ -329,6 +328,8 @@ display:
           id: status
           expose:
             operator: ''
+            operator_limit_selection: false
+            operator_list: {  }
           group: 1
         parent_field_name:
           id: parent_field_name
@@ -354,6 +355,8 @@ display:
             remember_roles:
               authenticated: authenticated
             placeholder: ''
+            operator_limit_selection: false
+            operator_list: {  }
           is_grouped: false
           group_info:
             label: ''
