--- a/config/sync/webform.settings.yml
+++ b/config/sync/webform.settings.yml
@@ -128,7 +128,7 @@ element:
   classes: "container-inline clearfix\nform--inline clearfix\nmessages messages--error\nmessages messages--warning\nmessages messages--status\n"
   horizontal_rule_classes: "webform-horizontal-rule--solid\nwebform-horizontal-rule--dashed\nwebform-horizontal-rule--dotted\nwebform-horizontal-rule--gradient\nwebform-horizontal-rule--thin\nwebform-horizontal-rule--medium\nwebform-horizontal-rule--thick\nwebform-horizontal-rule--flaired\nwebform-horizontal-rule--glyph\n"
   default_description_display: ''
-  default_more_title: More
+  default_more_title: Mehr
   default_section_title_tag: h2
   default_empty_option: true
   default_empty_option_required: ''
