All-inkl Error Log aktivieren

--- a/web/.htaccess
+++ b/web/.htaccess
@@ -2,6 +2,9 @@
 # Apache/PHP/Drupal settings:
 #
 
+php_flag log_errors on
+php_value error_log "/www/htdocs/w011d8a0/logs/php-error.log"
+
 # Protect files and directories from prying eyes.
 <FilesMatch "\.(engine|inc|install|make|module|profile|po|sh|.*sql|theme|twig|tpl(\.php)?|xtmpl|yml)(~|\.sw[op]|\.bak|\.orig|\.save)?$|^(\.(?!well-known).*|Entries.*|Repository|Root|Tag|Template|composer\.(json|lock)|web\.config)$|^#.*#$|\.php(~|\.sw[op]|\.bak|\.orig|\.save)$">
   <IfModule mod_authz_core.c>
