--- a/config/sync/webform.settings.yml
+++ b/config/sync/webform.settings.yml
@@ -9,7 +9,8 @@ settings:
   default_form_close_message: 'Sorry…This form is closed to new submissions.'
   default_form_exception_message: 'Dieses Webformular kann nicht angezeigt werden. Bitte kontaktieren Sie den Website-Administrator.'
   default_submit_button_label: Submit
-  default_reset_button_label: Reset
+  default_reset_button_label: Zurücksetzen
+  default_delete_button_label: Delete
   default_form_submit_once: false
   default_form_confidential_message: 'Dieses Formular ist vertraulich. Um es abzuschicken, müssen Sie sich daher <a href="[site:login-url]/logout?destination=[current-page:url:relative]">abmelden</a>.'
   default_form_access_denied_message: 'Please login to access this form.'
@@ -28,6 +29,8 @@ settings:
   default_wizard_next_button_label: 'Nächste Seite >'
   default_wizard_start_label: Beginn
   default_wizard_confirmation_label: Complete
+  default_wizard_toggle_show_label: 'Show all'
+  default_wizard_toggle_hide_label: 'Hide all'
   default_preview_next_button_label: Preview
   default_preview_prev_button_label: '< Zurück'
   default_preview_label: Preview
@@ -58,6 +61,7 @@ settings:
       - entity.node.webform.results_submissions
       - entity.node.webform.user.drafts
       - entity.node.webform.user.submissions
+  default_results_customize: false
   default_previous_submission_message: 'You have already submitted this webform. <a href="#">View your previous submission</a>.'
   default_previous_submissions_message: 'You have already submitted this webform. <a href="#">View your previous submissions</a>.'
   default_autofill_message: 'This submission has been autofilled with your previous submission.'
@@ -66,6 +70,9 @@ settings:
   confirmation_back_classes: "button\n"
   default_limit_total_message: 'Es sind keine weiteren Eingaben erlaubt.'
   default_limit_user_message: 'Es sind keine weiteren Eingaben erlaubt.'
+  default_share: false
+  default_share_node: false
+  default_share_theme_name: ''
   dialog: false
   dialog_options:
     narrow:
@@ -107,6 +114,7 @@ export:
   signature_format: status
   delimiter: ','
   excel: false
+  archive_type: tar
   excluded_exporters: {  }
   file_name: 'submission-[webform_submission:serial]'
 batch:
@@ -182,6 +190,7 @@ ui:
   offcanvas_disabled: false
   promotions_disabled: false
   description_help: true
+  toolbar_item: false
   html_editor_disabled: false
 libraries:
   excluded_libraries:
@@ -193,6 +202,7 @@ libraries:
 requirements:
   cdn: true
   bootstrap: true
+  clientside_validation: true
   spam: true
 langcode: de
 third_party_settings:
