--- a/config/sync/webform.webform.anmeldung_als_vereinsmitglied.yml
+++ b/config/sync/webform.webform.anmeldung_als_vereinsmitglied.yml
@@ -1,3 +1,4 @@
+uuid: 9f711a8a-25c5-4229-86e0-b4e56a968e25
 langcode: de
 status: open
 dependencies: {  }
@@ -11,7 +12,7 @@ id: anmeldung_als_vereinsmitglied
 title: 'Anmeldung als Vereinsmitglied'
 description: ''
 category: ''
-elements: "vorname:\n  '#type': textfield\n  '#title': Vorname\n  '#required': true\nnachname:\n  '#type': textfield\n  '#title': Nachname\n  '#required': true\nbirth_date:\n  '#type': textfield\n  '#title': Geburtsdatum\n  '#size': '8'\n  '#required': true\ncountry_origin:\n  '#type': textfield\n  '#title': Nationalität\n  '#required': true\nbirth_location:\n  '#type': textfield\n  '#title': Geburtsort\n  '#required': true\nfide_id:\n  '#type': textfield\n  '#title': Fide-ID\n  '#description': 'Falls vorhanden'\nchildren_parent:\n  '#type': fieldset\n  '#title': 'Bei Kindern: Name des Erziehungsberechtigten'\n  parent_first_name:\n    '#type': textfield\n    '#title': Vorname\n  parent_last_name:\n    '#type': textfield\n    '#title': Nachname\nadress:\n  '#type': fieldset\n  '#title': Adresse\n  street_nr:\n    '#type': textfield\n    '#title': 'Straße / Hausnr.'\n    '#required': true\n  area_code_city:\n    '#type': container\n    '#align_items': center\n    area_code:\n      '#type': textfield\n      '#title': PLZ\n      '#size': '8'\n      '#required': true\n    city:\n      '#type': textfield\n      '#title': Ort\n      '#required': true\n  telephone:\n    '#type': textfield\n    '#title': Telefonnummer\n  email:\n    '#type': email\n    '#title': E-Mail-Adresse\n    '#required': true\n    '#required_error': 'Bitte geben Sie Ihre E-Mailadresse ein.'\npayment_data:\n  '#type': fieldset\n  '#title': Kontodaten\n  info_fees:\n    '#type': processed_text\n    '#text': \"<p>Der Jahresbeitrag kostet 120 Euro.<br />\\r\\nErmäßigung ist auf Antrag möglich.<br />\\r\\nDer SEPA-Einzug ist verpflichtend.<br />\\r\\n&nbsp;</p>\\r\\n\"\n    '#format': basic_html\n  iban:\n    '#type': textfield\n    '#title': IBAN\n    '#required': true\n  bic:\n    '#type': textfield\n    '#title': BIC\n    '#description': 'Falls Konto im Ausland'\n  bank_name:\n    '#type': textfield\n    '#title': 'Name des Kreditinstitutes'\n    '#required': true\n  name_account_owner:\n    '#type': textfield\n    '#title': 'Name des Kontoinhabers'\n    '#description': 'Falls abweichend vom Mitglied / Erziehungsberechtigten'\n  sepa_consent:\n    '#type': checkbox\n    '#title': 'Ich stimme hiermit dem SEPA-Einzug des Mitgliedsbeitrages zu'\n    '#required': true\nprivacy_notice:\n  '#type': processed_text\n  '#text': \"<p>Wir fragen Ihre persönliche Daten samt Geburtsdatum, Nationalität, Gebortsort und Fide-ID ab, um Sie beim Niedersächsischen Schachverband anmelden zu können. Ihre sonstigen Kontaktdaten benötigen wir, um Sie eindeutig identifizieren und gegebenenfalls kontaktieren zu können.</p>\\r\\n\\r\\n<p>Ihre Bankdaten fragen wir ab, da wir die Mitgliedsbeiträge grundsätzlich per SEPA-Bankinzug erheben.<br />\\r\\nWeitere Hinweise in unserer <a data-entity-type=\\\"node\\\" data-entity-uuid=\\\"17550b5d-3da7-4a52-96e8-beb8878510cc\\\" href=\\\"/node/368\\\">Datenschutzerklärung</a>.<br />\\r\\n&nbsp;</p>\\r\\n\"\n  '#format': basic_html\nactions:\n  '#type': webform_actions\n  '#title': 'Submit button(s)'\n  '#submit__label': 'Anmeldung absenden'\n"
+elements: "vorname:\n  '#type': textfield\n  '#title': Vorname\n  '#required': true\nnachname:\n  '#type': textfield\n  '#title': Nachname\n  '#required': true\nbirth_date:\n  '#type': textfield\n  '#title': Geburtsdatum\n  '#size': 8\n  '#required': true\ncountry_origin:\n  '#type': textfield\n  '#title': Nationalität\n  '#required': true\nbirth_location:\n  '#type': textfield\n  '#title': Geburtsort\n  '#required': true\nfide_id:\n  '#type': textfield\n  '#title': Fide-ID\n  '#description': 'Falls vorhanden'\nchildren_parent:\n  '#type': fieldset\n  '#title': 'Bei Kindern: Name des Erziehungsberechtigten'\n  parent_first_name:\n    '#type': textfield\n    '#title': Vorname\n  parent_last_name:\n    '#type': textfield\n    '#title': Nachname\nadress:\n  '#type': fieldset\n  '#title': Adresse\n  street_nr:\n    '#type': textfield\n    '#title': 'Straße / Hausnr.'\n    '#required': true\n  area_code_city:\n    '#type': container\n    '#align_items': center\n    area_code:\n      '#type': textfield\n      '#title': PLZ\n      '#size': 8\n      '#required': true\n    city:\n      '#type': textfield\n      '#title': Ort\n      '#required': true\n  telephone:\n    '#type': textfield\n    '#title': Telefonnummer\n  email:\n    '#type': email\n    '#title': E-Mail-Adresse\n    '#required': true\n    '#required_error': 'Bitte geben Sie Ihre E-Mailadresse ein.'\npayment_data:\n  '#type': fieldset\n  '#title': Kontodaten\n  info_fees:\n    '#type': processed_text\n    '#text': \"<p>Der Jahresbeitrag kostet 120 Euro.<br />\\r\\nErmäßigung ist auf Antrag möglich.<br />\\r\\nDer SEPA-Einzug ist verpflichtend.<br />\\r\\n&nbsp;</p>\\r\\n\"\n    '#format': basic_html\n  iban:\n    '#type': textfield\n    '#title': IBAN\n    '#required': true\n  bic:\n    '#type': textfield\n    '#title': BIC\n    '#description': 'Falls Konto im Ausland'\n  bank_name:\n    '#type': textfield\n    '#title': 'Name des Kreditinstitutes'\n    '#required': true\n  name_account_owner:\n    '#type': textfield\n    '#title': 'Name des Kontoinhabers'\n    '#description': 'Falls abweichend vom Mitglied / Erziehungsberechtigten'\n  sepa_consent:\n    '#type': checkbox\n    '#title': 'Ich stimme hiermit dem SEPA-Einzug des Mitgliedsbeitrages zu'\n    '#required': true\nprivacy_notice:\n  '#type': processed_text\n  '#text': \"<p>Wir fragen Ihre persönliche Daten samt Geburtsdatum, Nationalität, Gebortsort und Fide-ID ab, um Sie beim Niedersächsischen Schachverband anmelden zu können. Ihre sonstigen Kontaktdaten benötigen wir, um Sie eindeutig identifizieren und gegebenenfalls kontaktieren zu können.</p>\\r\\n\\r\\n<p>Ihre Bankdaten fragen wir ab, da wir die Mitgliedsbeiträge grundsätzlich per SEPA-Bankinzug erheben.<br />\\r\\nWeitere Hinweise in unserer <a data-entity-type=\\\"node\\\" data-entity-uuid=\\\"17550b5d-3da7-4a52-96e8-beb8878510cc\\\" href=\\\"/node/368\\\">Datenschutzerklärung</a>.<br />\\r\\n&nbsp;</p>\\r\\n\"\n  '#format': basic_html\nactions:\n  '#type': webform_actions\n  '#title': 'Submit button(s)'\n  '#submit__label': 'Anmeldung absenden'\n"
 css: ''
 javascript: ''
 settings:
@@ -23,7 +24,7 @@ settings:
   page: true
   page_submit_path: ''
   page_confirm_path: ''
-  page_admin_theme: false
+  page_theme_name: ''
   form_title: both
   form_submit_once: false
   form_exception_message: ''
@@ -53,6 +54,11 @@ settings:
   form_access_denied_message: ''
   form_access_denied_attributes: {  }
   form_file_limit: ''
+  share: false
+  share_node: false
+  share_theme_name: ''
+  share_title: true
+  share_page_body_attributes: {  }
   submission_label: ''
   submission_log: false
   submission_views: {  }
@@ -78,11 +84,19 @@ settings:
   wizard_progress_percentage: false
   wizard_progress_link: false
   wizard_progress_states: false
+  wizard_auto_forward: true
+  wizard_auto_forward_hide_next_button: false
+  wizard_keyboard: true
   wizard_start_label: ''
   wizard_preview_link: false
   wizard_confirmation: true
   wizard_confirmation_label: ''
   wizard_track: ''
+  wizard_prev_button_label: ''
+  wizard_next_button_label: ''
+  wizard_toggle: false
+  wizard_toggle_show_label: ''
+  wizard_toggle_hide_label: ''
   preview: 0
   preview_label: ''
   preview_title: ''
@@ -125,8 +139,10 @@ settings:
   purge_days: null
   results_disabled: false
   results_disabled_ignore: false
+  results_customize: false
   token_view: false
   token_update: false
+  serial_disabled: false
 access:
   create:
     roles:
@@ -178,6 +194,7 @@ handlers:
   mail_treasurer:
     id: email
     label: 'E-Mail an Schatzmeister'
+    notes: ''
     handler_id: mail_treasurer
     status: true
     conditions: {  }
@@ -216,6 +233,7 @@ handlers:
   bestaetigungsmail_an_ausfueller_des_formulars:
     id: email
     label: 'Bestätigungsmail an Ausfüller des Formulars'
+    notes: ''
     handler_id: bestaetigungsmail_an_ausfueller_des_formulars
     status: true
     conditions: {  }
@@ -253,4 +271,3 @@ handlers:
       theme_name: ''
       parameters: {  }
 variants: {  }
-uuid: 9f711a8a-25c5-4229-86e0-b4e56a968e25
