--- a/config/sync/core.entity_view_display.node.player.default.yml
+++ b/config/sync/core.entity_view_display.node.player.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.player.body
     - field.field.node.player.field_dwz
     - field.field.node.player.field_function_club
+    - field.field.node.player.field_member_no_dsb
     - field.field.node.player.field_player_image
     - image.style.medium
     - node.type.player
@@ -52,5 +53,6 @@ content:
     type: image
     region: content
 hidden:
+  field_member_no_dsb: true
   langcode: true
   links: true
