--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -55,6 +55,9 @@ module:
   masquerade: 0
   menu_ui: 0
   metatag: 0
+  migrate: 0
+  migrate_plus: 0
+  migrate_tools: 0
   node: 0
   node_class: 0
   options: 0
