Installed config_update, continued player_dwz migration, source plugin for player_dwz

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "require": {
         "composer/installers": "^1.2",
         "drupal/better_exposed_filters": "^5.0@beta",
+        "drupal/config_update": "^1.7",
         "drupal/core-composer-scaffold": "^8.9",
         "drupal/core-recommended": "^8.9",
         "drupal/migrate_plus": "^5.1",
