--- a/web/modules/custom/hsk_migrate/config/install/migrate_plus.migration.player_dwz.yml
+++ b/web/modules/custom/hsk_migrate/config/install/migrate_plus.migration.player_dwz.yml
@@ -21,3 +21,13 @@ source:
     - name: dwz
       Label: "DWZ"
       selector: dwz
+
+process:
+  type:
+    plugin: default_value
+    default_value: player
+  field_member_no_dsb: member_no
+  field_dwz:
+    plugin: default_value
+    default_value: dwz
+
