Disabled hsk_migrate and deletec config for it in sync

--- a/web/modules/custom/hsk_migrate/config/install/migrate_plus.migration.player_dwz.yml
+++ b/web/modules/custom/hsk_migrate/config/install/migrate_plus.migration.player_dwz.yml
@@ -1,6 +1,6 @@
 id: player_dwz
 label: Import Player DWZ from external source
-migration_group: hsk
+migration_group: hsk_migrations
 source:
   track_changes: true
   plugin: hsk_player_dwz
