Die Destination fehlte in der Migration

--- a/web/modules/custom/hsk_migrate/config/install/migrate_plus.migration.player_dwz.yml
+++ b/web/modules/custom/hsk_migrate/config/install/migrate_plus.migration.player_dwz.yml
@@ -21,7 +21,8 @@ source:
     - name: dwz
       Label: "DWZ"
       selector: dwz
-
+destination:
+  plugin: entity:node
 process:
   type:
     plugin: default_value
