--- a/web/modules/custom/hsk_migrate/config/install/migrate_plus.migration.player_dwz.yml
+++ b/web/modules/custom/hsk_migrate/config/install/migrate_plus.migration.player_dwz.yml
@@ -7,18 +7,21 @@ source:
   data_fetcher_plugin: http
   data_parser_plugin: xml
   urls: https://www.schachbund.de/php/dewis/verein.php?zps=70107&format=xml
-  item_selector: "Liste/Spieler"
+  item_selector: /Liste/Spieler
   ids:
     id:
       type: integer
   fields:
-    - name: id
+    -
+      name: id
       label: "ID"
       selector: id
-    - name: member_no
+    -
+      name: member_no
       label: "Member Number DSB"
       selector: mglnr
-    - name: dwz
+    -
+      name: dwz
       Label: "DWZ"
       selector: dwz
 destination:
