--- a/config/sync/core.entity_view_display.node.player.entity_embed.yml
+++ b/config/sync/core.entity_view_display.node.player.entity_embed.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.node.entity_embed
     - field.field.node.player.body
     - field.field.node.player.field_dwz
+    - field.field.node.player.field_fide_id
     - field.field.node.player.field_function_club
     - field.field.node.player.field_member_no_dsb
     - field.field.node.player.field_player_image
@@ -39,6 +40,7 @@ content:
 hidden:
   body: true
   field_dwz: true
+  field_fide_id: true
   field_member_no_dsb: true
   langcode: true
   links: true
