--- a/config/sync/core.entity_view_display.node.player.teaser.yml
+++ b/config/sync/core.entity_view_display.node.player.teaser.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - field.field.node.player.body
     - field.field.node.player.field_dwz
+    - field.field.node.player.field_fide_id
     - field.field.node.player.field_function_club
     - field.field.node.player.field_member_no_dsb
     - field.field.node.player.field_player_image
@@ -39,6 +40,7 @@ content:
     region: content
 hidden:
   field_dwz: true
+  field_fide_id: true
   field_function_club: true
   field_member_no_dsb: true
   langcode: true
