--- a/config/sync/core.menu.static_menu_link_overrides.yml
+++ b/config/sync/core.menu.static_menu_link_overrides.yml
@@ -1,10 +1,10 @@
 definitions:
   contact__site_page:
+    weight: -50
     menu_name: footer
     parent: ''
-    weight: -50
     expanded: false
-    enabled: false
+    enabled: true
   standard__front_page:
     enabled: false
     menu_name: main
