Focal Point für Newsbild in Block auf Startseite

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "drupal/better_exposed_filters": "^5.0@beta",
         "drupal/core-composer-scaffold": "^8.9",
         "drupal/core-recommended": "^8.9",
+        "drupal/focal_point": "^1.5",
         "drupal/webform": "^5.22",
         "drush/drush": "^10.2"
     },
