--- a/config/sync/image.style.news_thumb_startseite.yml
+++ b/config/sync/image.style.news_thumb_startseite.yml
@@ -1,15 +1,17 @@
 uuid: 6a643d5f-9b80-4da9-a593-8c6d69bb0e68
 langcode: de
 status: true
-dependencies: {  }
+dependencies:
+  module:
+    - focal_point
 name: news_thumb_startseite
 label: 'News Thumb Startseite'
 effects:
-  9c72cf29-2597-4945-a5b8-5bb476dfe2c5:
-    uuid: 9c72cf29-2597-4945-a5b8-5bb476dfe2c5
-    id: image_scale_and_crop
-    weight: 1
+  c2f3b828-7595-47fe-9d74-41f0c0b94439:
+    uuid: c2f3b828-7595-47fe-9d74-41f0c0b94439
+    id: focal_point_scale_and_crop
+    weight: 2
     data:
       width: 78
       height: 78
-      anchor: center-center
+      crop_type: focal_point
