--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "require": {
         "composer/installers": "^1.2",
         "drupal/better_exposed_filters": "^5.0@beta",
+        "drupal/block_class": "^1.3",
         "drupal/core-composer-scaffold": "^8.9",
         "drupal/core-recommended": "^8.9",
         "drupal/focal_point": "^1.5",
